Fix menu on mobile

--- a/wp-content/themes/monday/assets/styles/main.less
+++ b/wp-content/themes/monday/assets/styles/main.less
@@ -508,51 +508,66 @@ blockquote {
 @media only screen and (min-width: 768px) and (max-width: 959px) {}
 /* All Mobile Sizes (devices and browser) */
 
-@media only screen and (max-width: 767px) {}
-/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
-
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-    .navbar-collapse {
-        background: #fff;
-        padding: 0;
-        position: absolute;
-        z-index: 100;
-        left: 0;
-        right: 0;
-        top: 0;
-        .mobile-navbar-collpase {
-            background: #fff;
-            height: 140px;
-            border-bottom: 1px solid #eae9e9;
-            margin-bottom: 10px;
-            img {
-                height: auto;
-                width: 195px;
-                margin-left: 15px;
+@media only screen and (max-width: 767px) {
+    .navbar-default {
+        position: inherit;
+        border: none;
+        .navbar-header {
+            height: 104px;
+            background: #000;
+            .navbar-brand {
+                margin-top: 15px;
+                img {
+                    width: 120px;
+                }
             }
-            .mobile-nav-close {
-                position: absolute;
-                right: 24px;
-                top: 21px;
-                color: #666;
+            .icon-bar {
+                height: 4px;
+                width: 27px;
             }
         }
-        .nav {
-            margin: 0;
-            width: 100%;
-            li {
+        .navbar-collapse {
+            background: #fff;
+            padding: 0;
+            position: absolute;
+            z-index: 100;
+            left: 0;
+            right: 0;
+            top: 0;
+            .mobile-navbar-collpase {
+                background: #fff;
+                height: 140px;
                 border-bottom: 1px solid #eae9e9;
-                padding-bottom: 10px;
-                a {
-                    text-align: right;
-                    color: #00a1e4;
-                    font-size: 30px;
+                margin-bottom: 10px;
+                img {
+                    height: auto;
+                    width: 195px;
+                    margin-left: 15px;
+                }
+                .mobile-nav-close {
+                    position: absolute;
+                    right: 24px;
+                    top: 21px;
+                    color: #666;
+                }
+            }
+            .nav {
+                margin: 0;
+                width: 100%;
+                li {
+                    border-bottom: 1px solid #eae9e9;
+                    padding-bottom: 10px;
+                    a {
+                        text-align: right;
+                        color: #00a1e4;
+                        font-size: 30px;
+                    }
                 }
             }
         }
     }
 }
-/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 
 @media only screen and (max-width: 479px) {
     .ngg-casestudy {
@@ -646,24 +661,63 @@ blockquote {
             }
         }
     }
-    .navbar-default {
-        position: inherit;
-        border: none;
-        .navbar-header {
-            height: 104px;
-            background: #000;
-            .navbar-brand {
-                margin-top: 15px;
-                img {
-                    width: 120px;
-                }
-            }
-            .icon-bar {
-                height: 4px;
-                width: 27px;
-            }
-        }
-    }
+    // .navbar-default {
+    //     position: inherit;
+    //     border: none;
+    //     .navbar-header {
+    //         height: 104px;
+    //         background: #000;
+    //         .navbar-brand {
+    //             margin-top: 15px;
+    //             img {
+    //                 width: 120px;
+    //             }
+    //         }
+    //         .icon-bar {
+    //             height: 4px;
+    //             width: 27px;
+    //         }
+    //     }
+    //     .navbar-collapse {
+    //         background: #fff;
+    //         padding: 0;
+    //         position: absolute;
+    //         z-index: 100;
+    //         left: 0;
+    //         right: 0;
+    //         top: 0;
+    //         .mobile-navbar-collpase {
+    //             background: #fff;
+    //             height: 140px;
+    //             border-bottom: 1px solid #eae9e9;
+    //             margin-bottom: 10px;
+    //             img {
+    //                 height: auto;
+    //                 width: 195px;
+    //                 margin-left: 15px;
+    //             }
+    //             .mobile-nav-close {
+    //                 position: absolute;
+    //                 right: 24px;
+    //                 top: 21px;
+    //                 color: #666;
+    //             }
+    //         }
+    //         .nav {
+    //             margin: 0;
+    //             width: 100%;
+    //             li {
+    //                 border-bottom: 1px solid #eae9e9;
+    //                 padding-bottom: 10px;
+    //                 a {
+    //                     text-align: right;
+    //                     color: #00a1e4;
+    //                     font-size: 30px;
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
 }
 /* #Font-Face
 ================================================== */
